--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
 
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.codepath.libraries:asynchttpclient:2.2.0'
